output.css
/* ... */
.-m-2{
  margin: -0.5rem;
}

.mx-auto{
  margin-left: auto;
  margin-right: auto;
}

.my-\[6px\]{
  margin-top: 6px;
  margin-bottom: 6px;
}

.ml-auto{
  margin-left: auto;
}

.block{
  display: block;
}

.flex{
  display: flex;
}

.table{
  display: table;
}

.grid{
  display: grid;
}

.h-\[1px\]{
  height: 1px;
}

.h-\[20px\]{
  height: 20px;
}

.h-\[40px\]{
  height: 40px;
}

.h-auto{
  height: auto;
}

.min-h-screen{
  min-height: 100vh;
}

.w-\[100\%\]{
  width: 100%;
}

.w-\[20px\]{
  width: 20px;
}

.w-\[40px\]{
  width: 40px;
}

.w-\[650px\]{
  width: 650px;
}

.w-auto{
  width: auto;
}

.max-w-\[250px\]{
  max-width: 250px;
}

.max-w-\[650px\]{
  max-width: 650px;
}

.transform{
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.cursor-pointer{
  cursor: pointer;
}

.items-center{
  align-items: center;
}

.justify-center{
  justify-content: center;
}

.justify-around{
  justify-content: space-around;
}

.gap-3{
  gap: 0.75rem;
}

.gap-4{
  gap: 1rem;
}

.gap-6{
  gap: 1.5rem;
}

.gap-x-2{
  -moz-column-gap: 0.5rem;
       column-gap: 0.5rem;
}

.gap-x-4{
  -moz-column-gap: 1rem;
       column-gap: 1rem;
}

.rounded-\[10px\]{
  border-radius: 10px;
}

.rounded-\[12px\]{
  border-radius: 12px;
}

.rounded-\[6px\]{
  border-radius: 6px;
}

.rounded-full{
  border-radius: 9999px;
}

.rounded-md{
  border-radius: 0.375rem;
}

.border-\[1\.5px\]{
  border-width: 1.5px;
}

.border-\[\#c9c9c9\]{
  --tw-border-opacity: 1;
  border-color: rgb(201 201 201 / var(--tw-border-opacity));
}

.border-\[\#d6d6d6\]{
  --tw-border-opacity: 1;
  border-color: rgb(214 214 214 / var(--tw-border-opacity));
}

.bg-\[\#e2e2e2\]{
  --tw-bg-opacity: 1;
  background-color: rgb(226 226 226 / var(--tw-bg-opacity));
}

.bg-\[\#f7f7f7\]{
  --tw-bg-opacity: 1;
  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
}

.bg-button-link-color{
  --tw-bg-opacity: 1;
  background-color: rgb(240 240 240 / var(--tw-bg-opacity));
}

.bg-card-color{
  --tw-bg-opacity: 1;
  background-color: rgb(233 233 233 / var(--tw-bg-opacity));
}

.bg-icon-color{
  --tw-bg-opacity: 1;
  background-color: rgb(227 229 234 / var(--tw-bg-opacity));
}

.bg-slate-800{
  --tw-bg-opacity: 1;
  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
}

.bg-opacity-15{
  --tw-bg-opacity: 0.15;
}

.bg-\[url\(\'background\.jpg\'\)\]{
  background-image: url('background.jpg');
}

.bg-cover{
  background-size: cover;
}

.bg-no-repeat{
  background-repeat: no-repeat;
}

.p-10{
  padding: 2.5rem;
}

.p-4{
  padding: 1rem;
}

.p-5{
  padding: 1.25rem;
}

.font-poppins{
  font-family: Poppins, sans-serif;
}

.font-rubik{
  font-family: Rubik, sans-serif;
}

.text-\[29px\]{
  font-size: 29px;
}

.text-label{
  font-size: 13px;
}

.text-position-link{
  font-size: 11px;
}

.text-position-title{
  font-size: 16px;
}

.text-small-title{
  font-size: 20px;
}

.font-medium{
  font-weight: 500;
}

.font-semibold{
  font-weight: 600;
}

.text-\[\#333333\]{
  --tw-text-opacity: 1;
  color: rgb(51 51 51 / var(--tw-text-opacity));
}

.text-\[\#8c8c8c\]{
  --tw-text-opacity: 1;
  color: rgb(140 140 140 / var(--tw-text-opacity));
}

.blur{
  --tw-blur: blur(8px);
  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
}

.drop-shadow-lg{
  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
}

.backdrop-blur-\[1vmax\]{
  --tw-backdrop-blur: blur(1vmax);
  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
}

.hover\:bg-\[\#e8e8e8\]:hover{
  --tw-bg-opacity: 1;
  background-color: rgb(232 232 232 / var(--tw-bg-opacity));
}

